# magical-mystery-house

./: .benchmark-results.json  .boundary-rules.md  .continuous-improvement.out  .cursor-post-update.sh  .eslintrc.json  .experiment-metrics.json  .flyignore  .gitattributes  .gitignore  .gitlab-ci.yml  .godotignore  .health-report.json  .master-docs-analysis.json  .monorepo-foundation-report.json  .npmrc  .registry-validation.json  .repo-connection-report.json  .status.json  .system-report.json  25-cycles-results.json  ALL_CHARACTER_DATA_COMPILED.json  ALL_DAY_RUNNING.md  ALL_NIGHT_CONFIRMED.md  ALL_NIGHT_RUN_CONFIRMED.md  ALL_NIGHT_RUN_CONFIRMED_FINAL.md  ALL_PACKAGES_TECH_CONNECTIONS.json  AUTOMATIC_IMPROVEMENTS.md  BEST_PRACTICES_APPLIED.md  BOT_CONTRACT.md  BOUNDARY_RULES_ENFORCED.md  BUILD_COMPLETE.md  CATHEDRAL_CONNECTIONS.json  CATHEDRAL_QUALITY_STANDARDS.md  CHANGES_IN_555_CYCLES.md  CHARACTER_DATA_COMPLETE.md  CHARACTER_DATA_IMPROVEMENTS.json  CLEANUP_SUMMARY.md  CODEX_ALIGNMENT_PLAN.json  CODEX_ALIGNMENT_PLAN.md  CODEX_MASTER.json  (+129 more)
.archive/: .egregore-improvement-state.json  CHARACTER_DATA_IMPROVEMENTS.json  CONTINUOUS_IMPROVEMENTS.md  GAME_DATA_COMPILATION.json  IMPROVEMENTS_MADE.md  ONGOING_IMPROVEMENTS.md  README.md.1764285746334
.backups/: state-backup-2025-11-28T11-14-46-777Z.json
.cleanup-backup/: 1764463423688-ACTIVE_IMPROVEMENTS.md.vision-backup  1764463423751-COMPLETE_LEARNING_AND_CHANGES_REPORT.md.vision-backup  1764463423761-COMPLETE_VISION_UNDERSTANDING.md.vision-backup  1764463423768-COMPREHENSIVE_IMPROVEMENT_SUMMARY.md.vision-backup  1764463423774-CONSOLIDATED_SUMMARY.md.vision-backup  1764463423778-CONTINUOUS_IMPROVEMENT_ACTIVE.md.vision-backup  1764463423785-CONTINUOUS_IMPROVEMENT_STATUS.md.vision-backup  1764463423794-CONTINUOUS_LEARNING_AND_LIVE_UPDATES.md.vision-backup  1764463423806-CROSS_PLATFORM_ADDITIVE.md.vision-backup  1764463423844-CURRENT_ACTIVITY.md.vision-backup  1764463423974-DEDUCED_IMPROVEMENTS.md.vision-backup  (+31 more)
.safe-merge-backup/.consolidation-backups/kira-audio-engine/kira-audio-engine/: Cargo.toml  README.md  package.json
src/: App.tsx
(+6150 files in other folders)
